nuage de compétences

--- a/css/style-medium.css
+++ b/css/style-medium.css
@@ -94,3 +94,14 @@
 			#navPanel nav .button {
 				width: 100%;
 			}
+
+	.image.fit {
+			display: block;
+			margin: 0 0 2em 0;
+			width: 100%;
+		}
+
+			.image.fit img {
+				width: 80%;
+				border-radius: 50%;
+			}	
