--- a/css/style-xsmall.css
+++ b/css/style-xsmall.css
@@ -58,3 +58,15 @@
 	#banner {
 		padding: 5em 2em 4em 2em;
 	}
+
+
+	.image.fit {
+			display: block;
+			margin: 0 0 2em 0;
+			width: 100%;
+		}
+
+			.image.fit img {
+				width: 80%;
+				border-radius: 50%;
+			}
