--- a/css/style-small.css
+++ b/css/style-small.css
@@ -38,3 +38,14 @@
 			padding-left: 0;
 			display: block;
 		}
+
+	.image.fit {
+			display: block;
+			margin: 0 0 2em 0;
+			width: 100%;
+		}
+
+			.image.fit img {
+				width: 90%;
+				border-radius: 50%;
+			}		
